--- a/RestockAnywhere/RestockAnywhere.csproj
+++ b/RestockAnywhere/RestockAnywhere.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AssemblyName>RestockAnywhere</AssemblyName>
     <Product>Fleeting Seasons</Product>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
@@ -50,5 +50,8 @@
   <Target Name="CompleteCleanup" AfterTargets="Clean">
     <RemoveDir Directories="$(InstallFolder)" />
     <Delete Files="$(WorkingDirectory)\$(MSBuildProjectName).zip" />
+  </Target>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="copy /Y &quot;$(TargetPath)&quot; &quot;$(GamePath)\BepInEx\scripts\$(TargetFileName)&quot;&#xD;&#xA;copy /Y &quot;$(WorkingDirectory)\$(TargetName).pdb&quot; &quot;$(GamePath)\BepInEx\scripts\$(TargetName).pdb&quot;" />
   </Target>
 </Project>
